--- a/_pages/welcome.html
+++ b/_pages/welcome.html
@@ -1,24 +1,24 @@
 ---
 permalink: /
-title: "Welcome"
-excerpt: "...to my page! I'm Julius, a PhD candidate and researcher in the Earth System Analysis department at the Potsdam Institute for Climate Impact Research. I focus on tipping points and Antarctic ice sheet stability."
+# title: "Welcome!"
+# excerpt: "...to my page! I'm Julius, a PhD candidate and researcher in the Earth System Analysis department at the Potsdam Institute for Climate Impact Research. I focus on tipping points and Antarctic ice sheet stability."
 header:
-  overlay_image: header1.jpg
+  overlay_image: wave.png
   overlay_filter: 0.2 # same as adding an opacity of 0.2 to a black background
-  caption: "Photo credit: J. Garbe"
+  caption: "Photo credit"
 author_profile: true
 redirect_from:
   - 
 ---
 
-<p>Hi, I'm Julius. I am a PhD candidate and polar climate scientist in the <a href="https://www.pik-potsdam.de/en/institute/departments/earth-system-analysis" title="https://www.pik-potsdam.de/en/institute/departments/earth-system-analysis">Earth System Analysis</a> department at the Potsdam Institute for Climate Impact Research (PIK), Germany.</p>
-<p>At PIK, I am part of the working group on <a href="https://www.pik-potsdam.de/ice" title="https://www.pik-potsdam.de/ice">Ice Dynamics</a> led by Prof. Ricarda Winkelmann as well as PIK's FutureLab on <a href="https://www.pik-potsdam.de/earthresilience" title="https://www.pik-potsdam.de/earthresilience">Earth Resilience in the Anthropocene</a>. My work is funded by the Leibniz project <a href="https://www.pik-potsdam.de/dominoes" title="https://www.pik-potsdam.de/dominoes">DominoES</a> on interacting tipping elements in the Earth system and the EU's Horizon 2020 project <a href="https://www.tipaccs.eu" title="https://www.tipaccs.eu">TiPACCs</a> on tipping points in Antarctic climate components.</p>
+<p>Welcome! I am a Postdoctoral Research Scientist in the <a href="https://ocean-transport.github.io/cds_lab.html" title="https://ocean-transport.github.io/cds_lab.html">Climate Data Science Lab</a> at the <a href="https://www.ldeo.columbia.edu/" title="https://www.ldeo.columbia.edu/">Lamont-Doherty Earth Observatory</a>, which is part of the Earth Institute at <a href="https://www.columbia.edu/" title="https://www.columbia.edu/">Columbia University</a>. Our research group is led by Ryan Abernathey with funding from the <a href="https://www.moore.org/" title="https://www.moore.org/">Gordon and Betty Moore Foundation</a> and collaboration with the <a href="http://pangeo.io/" title="http://pangeo.io/">Pangeo Project</a>.</p>
+<p>I recently received my PhD from the School of Oceanography at the University of Washington under the advisement of LuAnne Thompson. My dissertation focused on the spatiotemporal evolution of marine heatwaves globally and developed a novel tracking algorithm called Ocetrac to characterize dangerous marine heatwaves</p>
 
 <h2>News</h2>
 
-<p><a href="https://doi.org/10.1038/s41586-020-2727-5" title="https://doi.org/10.1038/s41586-020-2727-5"><img src="/images/Cover_24_September_2020.png" style="float: right; margin-left: 10px; width: 180px"></a>
+# <p><a href="https://doi.org/10.1038/s41586-020-2727-5" title="https://doi.org/10.1038/s41586-020-2727-5"><img src="/images/Cover_24_September_2020.png" style="float: right; margin-left: 10px; width: 180px"></a>
 <strong>23 Sep 2020:</strong> Our paper <em><a href="publications/garbe-2020" title="publications/garbe-2020">"The hysteresis of the Antarctic Ice Sheet"</a></em> was published today in <em>Nature</em> and will be featured as the cover story of tomorrow's issue! You can find the paper <a href="https://doi.org/10.1038/s41586-020-2727-5" title="https://doi.org/10.1038/s41586-020-2727-5">here</a>. Also see the official PIK <a href="https://www.pik-potsdam.de/en/news/latest-news/stability-check-on-antarctica-reveals-high-risk-for-long-term-sea-level-rise" title="https://www.pik-potsdam.de/en/news/latest-news/stability-check-on-antarctica-reveals-high-risk-for-long-term-sea-level-rise">press release</a>.</p>
 
-<p><strong>14 Feb 2020:</strong> Our paper summarizing the results of the Linear Antarctic Response Model Intercomparison Project (<em>LARMIP-2</em>) is out! Find it <a href="https://doi.org/10.5194/esd-11-35-2020" title="https://doi.org/10.5194/esd-11-35-2020">here</a> (open access). Also see the official PIK <a href="https://www.pik-potsdam.de/news/press-releases/the-antarctica-factor-model-uncertainties-reveal-upcoming-sea-level-risk" title="https://www.pik-potsdam.de/news/press-releases/the-antarctica-factor-model-uncertainties-reveal-upcoming-sea-level-risk">press release</a>.</p>
+# <p><strong>14 Feb 2020:</strong> Our paper summarizing the results of the Linear Antarctic Response Model Intercomparison Project (<em>LARMIP-2</em>) is out! Find it <a href="https://doi.org/10.5194/esd-11-35-2020" title="https://doi.org/10.5194/esd-11-35-2020">here</a> (open access). Also see the official PIK <a href="https://www.pik-potsdam.de/news/press-releases/the-antarctica-factor-model-uncertainties-reveal-upcoming-sea-level-risk" title="https://www.pik-potsdam.de/news/press-releases/the-antarctica-factor-model-uncertainties-reveal-upcoming-sea-level-risk">press release</a>.</p>
 
-<p><strong>19 Dec 2019:</strong> The agenda-setting paper for our <em>DominoES</em> project is now available as a preprint on <a href="https://arxiv.org/abs/1911.10063" title="https://arxiv.org/abs/1911.10063">arXiv</a> (open access).</p>
+# <p><strong>19 Dec 2019:</strong> The agenda-setting paper for our <em>DominoES</em> project is now available as a preprint on <a href="https://arxiv.org/abs/1911.10063" title="https://arxiv.org/abs/1911.10063">arXiv</a> (open access).</p>
