--- a/_pages/welcome.html
+++ b/_pages/welcome.html
@@ -6,7 +6,7 @@ header:
   overlay_image: wave.png
   overlay_filter: 0.2 # same as adding an opacity of 0.2 to a black background
   caption: "Photo credit"
-author_profile: true
+author_profile: false
 redirect_from:
   - 
 ---
