--- a/_pages/welcome.html
+++ b/_pages/welcome.html
@@ -1,10 +1,10 @@
 ---
 permalink: /
 title: " "
-# excerpt: "...to my page! I'm Julius, a PhD candidate and researcher in the Earth System Analysis department at the Potsdam Institute for Climate Impact Research. I focus on tipping points and Antarctic ice sheet stability."
+excerpt: " "
 header:
   overlay_image: wave.png
-  overlay_filter: 0.2 # same as adding an opacity of 0.2 to a black background
+  overlay_filter: 0 # same as adding an opacity of 0.2 to a black background
   caption: "Photo credit"
 author_profile: true
 redirect_from:
