--- a/_pages/welcome.html
+++ b/_pages/welcome.html
@@ -1,7 +1,7 @@
 ---
 permalink: /
 title: " "
-excerpt: " "
+# excerpt: " "
 header:
   overlay_image: wave.png
   overlay_filter: 0 # same as adding an opacity of 0.2 to a black background
