--- a/_pages/welcome.html
+++ b/_pages/welcome.html
@@ -1,14 +1,13 @@
----
-permalink: /
-title: "Oceanography &#183; Climate &#183; Data Science
-"
 <style>
 mark { 
   background-color: black;
   color: white;
 }
 </style>
-excerpt: "<mark><em>Building and using open-source software to better understand Earth's changing climate.</em></mark>"
+---
+permalink: /
+title: "Oceanography &#183; Climate &#183; Data Science"
+excerpt: "<em>Building and using open-source software to better understand Earth's changing climate.</em>"
 header:
   overlay_image: wave.png
   overlay_filter: 0.2 # same as adding an opacity of 0.2 to a black background
