--- a/_pages/welcome.html
+++ b/_pages/welcome.html
@@ -1,7 +1,7 @@
 ---
 permalink: /
 title: "Oceanography &#183; Climate &#183; Data Science"
-excerpt: "<em>Building and using open-source software to better understand Earth's changing climate.</em>"
+excerpt: "<span style="background-color:black"><em>Building and using open-source software to better understand Earth's changing climate.</em></span>"
 header:
   overlay_image: wave.png
   overlay_filter: 0.2 # same as adding an opacity of 0.2 to a black background
