--- a/_pages/welcome.html
+++ b/_pages/welcome.html
@@ -12,6 +12,8 @@ redirect_from:
 ---
 
 <p>Welcome! I am a Postdoctoral Research Scientist in the <a href="https://ocean-transport.github.io/cds_lab.html" title="https://ocean-transport.github.io/cds_lab.html" target="_blank">Climate Data Science Lab</a> at the <a href="https://www.ldeo.columbia.edu/" title="https://www.ldeo.columbia.edu/" target="_blank">Lamont-Doherty Earth Observatory</a>, which is part of the Earth Institute at <a href="https://www.columbia.edu/" title="https://www.columbia.edu/" target="_blank">Columbia University</a>. Our research group is led by Ryan Abernathey with funding from the <a href="https://www.moore.org/" title="https://www.moore.org/" target="_blank">Gordon and Betty Moore Foundation</a> and collaboration with the <a href="http://pangeo.io/" title="http://pangeo.io/" target="_blank">Pangeo Project</a>.</p>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/UrAPaZMGWwo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <p>I recently received my PhD from the School of Oceanography at the University of Washington under the advisement of LuAnne Thompson. My dissertation focused on the spatiotemporal evolution of marine heatwaves globally and developed a novel tracking algorithm called Ocetrac to characterize dangerous marine heatwaves</p>
 
 <h2>News</h2>
