--- a/_pages/welcome.html
+++ b/_pages/welcome.html
@@ -19,6 +19,13 @@ redirect_from:
 <iframe width="560" height="315" src="https://www.youtube.com/embed/UrAPaZMGWwo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
+<h2>What Motivates My Work</h2>
+
+<p><img src="/images/3_rings.png" style="float: center; margin-center: 10px; width: 2400px"></a>
+
+<p>I find it really interesting to think about human impacts at the crossroads of two unprecedented ages: the Information Age and the Anthropocene. Global economies are increasingly technology centric and the production and consumption of data is growing exponentially. Meanwhile, the negative impacts of human activities on Earth have inevitably defined a new geologic age. This motivates my research to leverage and innovate new data-driven technologies to address modern environmental challenges.</p>
+
+
 <h2>News</h2>
 
 
