--- a/_pages/welcome.html
+++ b/_pages/welcome.html
@@ -1,7 +1,7 @@
 ---
 permalink: /
-title: "Oceanography &#183; Climate &#183; Data Science"
-excerpt: "<em>Building and using open-source software to better understand Earth's changing climate.</em>"
+title: "Welcome"
+excerpt: "<em>I'm Hillary, a postdoctoral research scientist at the Lamont-Doherty Earth Observatory building and using open-source software to better understand Earth's changing climate. </em>"
 header:
   overlay_image: wave.png
   overlay_filter: 0.2 # same as adding an opacity of 0.2 to a black background
@@ -21,7 +21,7 @@ redirect_from:
 
 <h2>What Motivates My Work</h2>
 
-<p><img src="/images/3_rings.png" style="float: left; margin-right: 10px; width: 180px"></a>
+<p><img src="/images/3_rings.png" style="float: left; margin-right: 10px; width: 200px"></a>
 <p>I find it really interesting to think about human impacts at the crossroads of two unprecedented ages: the Information Age and the Anthropocene. Global economies are increasingly technology centric and the production and consumption of data is growing exponentially. Meanwhile, the negative impacts of human activities on Earth have inevitably defined a new geologic age. This motivates my research to leverage and innovate new data-driven technologies to address modern environmental challenges.</p>
 
 
