--- a/_pages/welcome.html
+++ b/_pages/welcome.html
@@ -1,7 +1,7 @@
 ---
 permalink: /
 title: "Welcome"
-excerpt: "<em>I'm Hillary, a postdoctoral research scientist at the Lamont-Doherty Earth Observatory building and using open-source software to better understand Earth's changing climate. </em>"
+excerpt: "<em>I'm Hillary, a postdoctoral research scientist at the Lamont-Doherty Earth Observatory building and using open-source software to better understand Earth's changing climate. I study the complex spatiotemporal variability of geophysical fluids and their impacts.</em>"
 header:
   overlay_image: wave.png
   overlay_filter: 0.2 # same as adding an opacity of 0.2 to a black background
@@ -15,7 +15,7 @@ redirect_from:
 
 <h2>What Motivates My Work</h2>
 
-<p><img src="/images/3_rings.png" style="float: right; margin-left: 10px; width: 280px"></a>
+<p><img src="/images/3_rings.png" style="float: right; margin-left: 10px; width: 300px"></a>
 <p>I find it really interesting to think about human impacts at the crossroads of two unprecedented ages: the Information Age and the Anthropocene. Global economies are increasingly technology centric and the production and consumption of data is growing exponentially. Meanwhile, the negative impacts of human activities on Earth have inevitably defined a new geologic age. This motivates my research to leverage and innovate new data-driven technologies to address modern environmental challenges.</p>
 
 <p>I recently received my PhD from the School of Oceanography at the University of Washington under the advisement of LuAnne Thompson. My dissertation focused on the spatiotemporal evolution of marine heatwaves globally and developed a novel tracking algorithm called Ocetrac to characterize dangerous marine heatwaves</p>
