--- a/_pages/welcome.html
+++ b/_pages/welcome.html
@@ -1,6 +1,6 @@
 ---
 permalink: /
-title: "Welcome"
+title: "Welcome &#128075;"
 excerpt: "<em>I'm Hillary, a postdoctoral research scientist at the Lamont-Doherty Earth Observatory building and using open-source software to better understand Earth's changing climate. I study the complex spatiotemporal variability of geophysical fluids and their impacts.</em>"
 header:
   overlay_image: wave.png
